# backend/docs/swagger.json
@@ -211,9 +211,13 @@
     "definitions": {
         "models.User": {
             "type": "object",
+            "required": [
+                "email",
+                "user_name"
+            ],
             "properties": {
                 "created_at": {
-                    "description": "Password  string `json:\"password\" sql:\"password\"`",
+                    "description": "Password  string `json:\"password\" sql:\"password\" validate:\"required,min=6,max=50\"`",
                     "type": "string"
                 },
                 "email": {
@@ -226,7 +230,9 @@
                     "type": "string"
                 },
                 "user_name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 3
                 }
             }
         }
