# user-management/src/app/core/models/user.model.ts
@@ -1,0 +1,9 @@
+export interface User {
+    id?: number;
+    user_name: string;
+    email: string;
+    phone?: string;
+    address?: string;
+    createdAt?: Date;
+    updatedAt?: Date;
+}
