# user-management/src/app/models/user.model.ts
@@ -1,0 +1,7 @@
+export interface User {
+    id?: string;  // Optional for new users
+    user_name: string;
+    email: string;
+    phone: string;
+  }
+  
